# cpp_base

eigen_base/: CMakeLists.txt
eigen_base/src/: arrays.cpp  arrays2.cpp  comma_initializer.cpp  dot_cross.cpp  eigenGeometry.cpp  eigen_block1.cpp  eigen_block2.cpp  eigen_row_col.cpp  hello_eigen.cpp  matrices_and_vectors.cpp  matrix_base_operation.cpp  matrix_convert_array.cpp  matrix_initializer.cpp  matrix_transpose.cpp  matrix_transpose_conjugate_adjoint.cpp  position_minCoeff_maxCoeff.cpp  resize_dynamic_matrix.cpp  visualizeGeometry.cpp
intelligent_point/src/: learn_unique_ptr.cpp
智能指针/src/: learn_shared_ptr.cpp
