cmake_minimum_required(VERSION 3.10)
project(learn_eigen)

find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIR})

add_executable(hello_eigen src/hello_eigen.cpp)
add_executable(matrices_and_vectors src/matrices_and_vectors.cpp)
add_executable(comma_initializer src/comma_initializer.cpp)
add_executable(matrix_initializer src/matrix_initializer.cpp)
add_executable(resize_dynamic_matrix src/resize_dynamic_matrix.cpp)
add_executable(arrays src/arrays.cpp)
add_executable(arrays2 src/arrays2.cpp)
add_executable(matrix_convert_array src/matrix_convert_array.cpp)
add_executable(matrix_transpose_conjugate_adjoint src/matrix_transpose_conjugate_adjoint.cpp)
add_executable(matrix_transpose src/matrix_transpose.cpp)
add_executable(matrix_base_operation src/matrix_base_operation.cpp)
add_executable(position_minCoeff_maxCoeff src/position_minCoeff_maxCoeff.cpp)
add_executable(eigenMatrix src/eigenMatrix.cpp )
add_executable(eigenGeometry src/eigenGeometry.cpp )
add_executable(eigen_block1 src/eigen_block1.cpp)
add_executable(eigen_block2 src/eigen_block2.cpp)
add_executable(eigen_row_col src/eigen_row_col.cpp)
